Add "Reboot with MTE" option for supported devices.
Test: make -j64 RunSettingsRoboTests ROBOTEST_FILTER="com.android.settings.development.RebootWithMteDialogTest"
Test: make -j64 RunSettingsRoboTests ROBOTEST_FILTER="com.android.settings.development.RebootWithMtePreferenceControllerTest"

Bug: 206895651

Change-Id: I38ef2c5aeb5c5d805afd4f1ab860f7a0a4d18e1c

--- a/res/xml/development_settings.xml
+++ b/res/xml/development_settings.xml
@@ -45,6 +45,10 @@
             android:title="@string/capture_system_heap_dump_title" />
 
         <Preference
+            android:key="reboot_with_mte"
+            android:title="@string/reboot_with_mte_title" />
+
+        <Preference
             android:key="local_backup_password"
             android:title="@string/local_backup_password_title"
             android:summary="@string/local_backup_password_summary_none"
