--- a/res/xml/dream_fragment_overview.xml
+++ b/res/xml/dream_fragment_overview.xml
@@ -19,23 +19,15 @@
     xmlns:settings="http://schemas.android.com/apk/res-auto"
     android:title="@string/screensaver_settings_title">
 
-    <com.android.settings.widget.GearPreference
-        android:key="current_screensaver"
-        android:title="@string/screensaver_settings_current"
-        android:fragment="com.android.settings.dream.CurrentDreamPicker"
-        settings:controller="com.android.settings.dream.CurrentDreamPreferenceController" />
+    <com.android.settingslib.widget.LayoutPreference
+        android:key="dream_picker"
+        android:selectable="false"
+        android:layout="@layout/dream_picker_layout"
+        settings:controller="com.android.settings.dream.DreamPickerController"/>
 
     <Preference
         android:key="when_to_start"
         android:title="@string/screensaver_settings_when_to_dream"
-        android:fragment="com.android.settings.dream.WhenToDreamPicker" />
-
-    <PreferenceCategory>
-        <com.android.settingslib.widget.LayoutPreference
-            android:key="dream_start_now_button_container"
-            android:layout="@layout/dream_start_button"
-            android:selectable="false"
-            settings:controller="com.android.settings.dream.StartNowPreferenceController" />
-    </PreferenceCategory>
+        android:fragment="com.android.settings.dream.WhenToDreamPicker"/>
 
 </PreferenceScreen>
