Refactor some Preference Controllers to use BasePreferenceController
Test: atest SettingsUnitTests
Change-Id: Ic93f29d6c35cb1a43937fa7bf2f1e2d489cdd09f

--- a/res/xml/encryption_and_credential.xml
+++ b/res/xml/encryption_and_credential.xml
@@ -27,7 +27,8 @@
             android:key="encryption_and_credentials_encryption_status"
             android:title="@string/crypt_keeper_encrypt_title"
             android:fragment="com.android.settings.security.CryptKeeperSettings"
-            android:summary="@string/summary_placeholder" />
+            android:summary="@string/summary_placeholder"
+            settings:controller="com.android.settings.security.EncryptionStatusPreferenceController"/>
 
     </PreferenceCategory>
 
