--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -586,4 +586,8 @@
     <!-- The ratio to use when using the two-pane settings layout -->
     <item name="config_activity_embed_split_ratio" format="float" type="dimen">0.5</item>
 
+    <!-- The number of visible app icons while entering app list related pages for preloading.
+         Take the "Unrestricted data" page as the example, the visible app icons could be 15
+         on 6.4 inches screen size whether the font size and display size are both small. -->
+    <integer name="config_num_visible_app_icons">20</integer>
 </resources>
