New feature “Text and reading options” for SetupWizard, Wallpaper, and Settings (1/n).
Create preference fragment layout.

Bug: 211503117
Test: manual test
Change-Id: I16c01476b75c2eb6d83759233d4cc29bddfcd4a7

--- a/res/xml/accessibility_settings.xml
+++ b/res/xml/accessibility_settings.xml
@@ -38,10 +38,11 @@
 
         <!-- After completely finishing the Text and reading options feature, it will be visible. -->
         <Preference
+            android:fragment="com.android.settings.accessibility.TextReadingPreferenceFragment"
             android:icon="@drawable/ic_adaptive_font_download"
             android:key="text_reading_options"
             android:persistent="false"
-            android:title="@strings/accessibility_text_reading_options_title"
+            android:title="@string/accessibility_text_reading_options_title"
             settings:isPreferenceVisible="false"/>
 
         <Preference
