Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ibeeefa1a48fbbebd0779d942f354eb1389130f51

--- a/res/values-si/arrays.xml
+++ b/res/values-si/arrays.xml
@@ -104,7 +104,6 @@
     <item msgid="8568170800958331461">"සත්‍යාපනය නොකරන්න"</item>
     <item msgid="5703177653586269306">"සහතික තත්ත්වය ඉල්ලන්න"</item>
     <item msgid="326388247868439528">"සහතික තත්ත්වය අවශ්‍යයි"</item>
-    <item msgid="1090956283885790552">"සියලු විශ්වාසදායි නොවන සහතික තත්ත්ව අවශ්‍යයි"</item>
   </string-array>
   <string-array name="wifi_p2p_wps_setup">
     <item msgid="1446717102923442720">"ඔබන බොත්තම"</item>
@@ -423,6 +422,10 @@
     <item msgid="6485511780196327736">"යෙදුම්වලට උඩින් පාවීම"</item>
     <item msgid="3605616699204153590">"සංචලන තීරුව"</item>
   </string-array>
+  <string-array name="accessibility_button_gesture_selector_titles">
+    <item msgid="2370918472773154939">"බොත්තම"</item>
+    <item msgid="6922258575853746220">"ඉංගිතය"</item>
+  </string-array>
   <string-array name="accessibility_button_size_selector_titles">
     <item msgid="7482952318152486459">"කුඩා"</item>
     <item msgid="1666628329913333563">"විශාල"</item>
@@ -484,13 +487,21 @@
     <item msgid="3164591924266309710">"හැඹිලි ගත කළ (ක්‍රියාකාරකම් සේවාලාභියා)"</item>
     <item msgid="8186970968968646288">"හැඹිලි ගත කළ (හිස්)"</item>
   </string-array>
+  <string-array name="sim_color_light">
+    <item msgid="7007548668267207615">"@color/SIM_color_cyan"</item>
+    <item msgid="177868870612833388">"@color/SIM_color_blue800"</item>
+    <item msgid="1129898906008357171">"@color/SIM_color_green800"</item>
+    <item msgid="4206364087389793587">"@color/SIM_color_purple800"</item>
+    <item msgid="6728943460061940130">"@color/SIM_color_pink800"</item>
+    <item msgid="968332068361935002">"@color/SIM_color_orange"</item>
+  </string-array>
   <string-array name="color_picker">
-    <item msgid="3230992859486877963">"සේරා"</item>
+    <item msgid="7216413848731287689">"සියන්"</item>
     <item msgid="5661027589207588703">"නිල්"</item>
-    <item msgid="3795787248113275442">"ඉන්ඩිගෝ"</item>
+    <item msgid="1219738214736244749">"කොළ"</item>
     <item msgid="6331809026622602308">"දම්"</item>
     <item msgid="6390546163902724700">"රෝස"</item>
-    <item msgid="6618900408138432102">"රතු"</item>
+    <item msgid="6500473130620545980">"තැඹිලි"</item>
   </string-array>
   <string-array name="automatic_storage_management_days">
     <item msgid="8896644025110620477">"දින 30කට වඩා පැරණි"</item>
