--- a/res/values-cs/arrays.xml
+++ b/res/values-cs/arrays.xml
@@ -104,7 +104,6 @@
     <item msgid="8568170800958331461">"Neověřovat"</item>
     <item msgid="5703177653586269306">"Požádat o stav certifikátu"</item>
     <item msgid="326388247868439528">"Vyžadovat stav certifikátu"</item>
-    <item msgid="1090956283885790552">"Vyžadovat stavy všech nedůvěryhodných certifikátů"</item>
   </string-array>
   <string-array name="wifi_p2p_wps_setup">
     <item msgid="1446717102923442720">"Stisknutí tlačítka"</item>
@@ -423,6 +422,10 @@
     <item msgid="6485511780196327736">"Plovoucí přes ostatní aplikace"</item>
     <item msgid="3605616699204153590">"Navigační panel"</item>
   </string-array>
+  <string-array name="accessibility_button_gesture_selector_titles">
+    <item msgid="2370918472773154939">"Tlačítko"</item>
+    <item msgid="6922258575853746220">"Gesto"</item>
+  </string-array>
   <string-array name="accessibility_button_size_selector_titles">
     <item msgid="7482952318152486459">"Malé"</item>
     <item msgid="1666628329913333563">"Velké"</item>
@@ -484,13 +487,21 @@
     <item msgid="3164591924266309710">"V mezipaměti (klient aktivity)"</item>
     <item msgid="8186970968968646288">"V mezipaměti (prázdné)"</item>
   </string-array>
+  <string-array name="sim_color_light">
+    <item msgid="7007548668267207615">"@color/SIM_color_cyan"</item>
+    <item msgid="177868870612833388">"@color/SIM_color_blue800"</item>
+    <item msgid="1129898906008357171">"@color/SIM_color_green800"</item>
+    <item msgid="4206364087389793587">"@color/SIM_color_purple800"</item>
+    <item msgid="6728943460061940130">"@color/SIM_color_pink800"</item>
+    <item msgid="968332068361935002">"@color/SIM_color_orange"</item>
+  </string-array>
   <string-array name="color_picker">
-    <item msgid="3230992859486877963">"Šedozelená"</item>
+    <item msgid="7216413848731287689">"Azurová"</item>
     <item msgid="5661027589207588703">"Modrá"</item>
-    <item msgid="3795787248113275442">"Indigo"</item>
+    <item msgid="1219738214736244749">"Zelená"</item>
     <item msgid="6331809026622602308">"Fialová"</item>
     <item msgid="6390546163902724700">"Růžová"</item>
-    <item msgid="6618900408138432102">"Červená"</item>
+    <item msgid="6500473130620545980">"Oranžová"</item>
   </string-array>
   <string-array name="automatic_storage_management_days">
     <item msgid="8896644025110620477">"Starší než 30 dní"</item>
@@ -504,7 +515,7 @@
     <item msgid="9080166583718385565">"0"</item>
   </string-array>
   <string-array name="wifi_metered_entries">
-    <item msgid="3237321077949659241">"Zjistit automaticky"</item>
+    <item msgid="3237321077949659241">"Zjišťovat automaticky"</item>
     <item msgid="3779092145391320375">"Považovat za měřenou síť"</item>
     <item msgid="2047166446768045816">"Považovat za neměřenou síť"</item>
   </string-array>
