--- a/res/values-fi/arrays.xml
+++ b/res/values-fi/arrays.xml
@@ -104,7 +104,6 @@
     <item msgid="8568170800958331461">"Älä todenna"</item>
     <item msgid="5703177653586269306">"Pyydä varmenteen status"</item>
     <item msgid="326388247868439528">"Vaadi varmenteen status"</item>
-    <item msgid="1090956283885790552">"Vaadi kaikkien ei-luotettujen varmenteiden status"</item>
   </string-array>
   <string-array name="wifi_p2p_wps_setup">
     <item msgid="1446717102923442720">"Paina painiketta"</item>
@@ -421,7 +420,11 @@
   </string-array>
   <string-array name="accessibility_button_location_selector_titles">
     <item msgid="6485511780196327736">"Kelluu muiden sovellusten päällä"</item>
-    <item msgid="3605616699204153590">"Siirtymispalkki"</item>
+    <item msgid="3605616699204153590">"Navigointipalkki"</item>
+  </string-array>
+  <string-array name="accessibility_button_gesture_selector_titles">
+    <item msgid="2370918472773154939">"Painike"</item>
+    <item msgid="6922258575853746220">"Ele"</item>
   </string-array>
   <string-array name="accessibility_button_size_selector_titles">
     <item msgid="7482952318152486459">"Pieni"</item>
@@ -484,13 +487,21 @@
     <item msgid="3164591924266309710">"Välimuistissa (toiminnan suorittaja)"</item>
     <item msgid="8186970968968646288">"Välimuistissa (tyhjä)"</item>
   </string-array>
+  <string-array name="sim_color_light">
+    <item msgid="7007548668267207615">"@color/SIM_color_cyan"</item>
+    <item msgid="177868870612833388">"@color/SIM_color_blue800"</item>
+    <item msgid="1129898906008357171">"@color/SIM_color_green800"</item>
+    <item msgid="4206364087389793587">"@color/SIM_color_purple800"</item>
+    <item msgid="6728943460061940130">"@color/SIM_color_pink800"</item>
+    <item msgid="968332068361935002">"@color/SIM_color_orange"</item>
+  </string-array>
   <string-array name="color_picker">
-    <item msgid="3230992859486877963">"Sinivihreä"</item>
+    <item msgid="7216413848731287689">"Syaani"</item>
     <item msgid="5661027589207588703">"Sininen"</item>
-    <item msgid="3795787248113275442">"Indigo"</item>
+    <item msgid="1219738214736244749">"Vihreä"</item>
     <item msgid="6331809026622602308">"Violetti"</item>
     <item msgid="6390546163902724700">"Pinkki"</item>
-    <item msgid="6618900408138432102">"Punainen"</item>
+    <item msgid="6500473130620545980">"Oranssi"</item>
   </string-array>
   <string-array name="automatic_storage_management_days">
     <item msgid="8896644025110620477">"Yli 30 päivää vanhat"</item>
