--- a/res/values-hr/arrays.xml
+++ b/res/values-hr/arrays.xml
@@ -104,7 +104,6 @@
     <item msgid="8568170800958331461">"Nemoj potvrditi"</item>
     <item msgid="5703177653586269306">"Zatraži status certifikata"</item>
     <item msgid="326388247868439528">"Zahtijevaj status certifikata"</item>
-    <item msgid="1090956283885790552">"Zahtijevaj statuse svih nepouzdanih certifikata"</item>
   </string-array>
   <string-array name="wifi_p2p_wps_setup">
     <item msgid="1446717102923442720">"Gumb"</item>
@@ -173,7 +172,7 @@
   </string-array>
   <string-array name="wifi_ip_settings">
     <item msgid="6665889765350160154">"DHCP"</item>
-    <item msgid="6215795691318745695">"Statična"</item>
+    <item msgid="6215795691318745695">"Statično"</item>
   </string-array>
   <string-array name="wifi_proxy_settings">
     <item msgid="4669222334822978847">"Ništa"</item>
@@ -423,6 +422,10 @@
     <item msgid="6485511780196327736">"Plutanje preko drugih aplikacija"</item>
     <item msgid="3605616699204153590">"Navigacijska traka"</item>
   </string-array>
+  <string-array name="accessibility_button_gesture_selector_titles">
+    <item msgid="2370918472773154939">"Gumb"</item>
+    <item msgid="6922258575853746220">"Pokret"</item>
+  </string-array>
   <string-array name="accessibility_button_size_selector_titles">
     <item msgid="7482952318152486459">"Malen"</item>
     <item msgid="1666628329913333563">"Velik"</item>
@@ -484,13 +487,21 @@
     <item msgid="3164591924266309710">"Predmemorija (klijent aktivnosti)"</item>
     <item msgid="8186970968968646288">"Predmemorija (prazna)"</item>
   </string-array>
+  <string-array name="sim_color_light">
+    <item msgid="7007548668267207615">"@boja/SIM_boja_cijan"</item>
+    <item msgid="177868870612833388">"@boja/SIM_boja_plava800"</item>
+    <item msgid="1129898906008357171">"@boja/SIM_boja_zelena800"</item>
+    <item msgid="4206364087389793587">"@boja/SIM_boja_ljubičasta800"</item>
+    <item msgid="6728943460061940130">"@boja/SIM_boja_ružičasta800"</item>
+    <item msgid="968332068361935002">"@boja/SIM_boja_narančasta"</item>
+  </string-array>
   <string-array name="color_picker">
-    <item msgid="3230992859486877963">"Tirkiznoplava"</item>
+    <item msgid="7216413848731287689">"Cijan"</item>
     <item msgid="5661027589207588703">"Plava"</item>
-    <item msgid="3795787248113275442">"Indigo"</item>
+    <item msgid="1219738214736244749">"Zelena"</item>
     <item msgid="6331809026622602308">"Ljubičasta"</item>
     <item msgid="6390546163902724700">"Ružičasta"</item>
-    <item msgid="6618900408138432102">"Crvena"</item>
+    <item msgid="6500473130620545980">"Narančasta"</item>
   </string-array>
   <string-array name="automatic_storage_management_days">
     <item msgid="8896644025110620477">"Starije od 30 dana"</item>
