--- a/res/values-kk/arrays.xml
+++ b/res/values-kk/arrays.xml
@@ -104,7 +104,6 @@
     <item msgid="8568170800958331461">"Растамау"</item>
     <item msgid="5703177653586269306">"Сертификат күйін сұрау"</item>
     <item msgid="326388247868439528">"Сертификат күйін талап ету"</item>
-    <item msgid="1090956283885790552">"Барлық сенімсіз сертификаттардың күйлерін талап ету"</item>
   </string-array>
   <string-array name="wifi_p2p_wps_setup">
     <item msgid="1446717102923442720">"Итеру түймесі"</item>
@@ -225,7 +224,7 @@
     <item msgid="528483497841471005">"Локация"</item>
     <item msgid="7786376598377098070">"Жеке мағлұмат"</item>
     <item msgid="7707692387382449990">"Хабар алмасу"</item>
-    <item msgid="2235402926760712958">"Meдиа"</item>
+    <item msgid="2235402926760712958">"Mультимeдиа"</item>
     <item msgid="1822578131647724167">"Құрылғы"</item>
   </string-array>
   <string-array name="app_ops_summaries">
@@ -265,7 +264,7 @@
     <item msgid="617344340943430125">"негізгі дыбыс"</item>
     <item msgid="1249691739381713634">"дыбыс қаттылығы"</item>
     <item msgid="6485000384018554920">"қоңыраудың дыбыс деңгейі"</item>
-    <item msgid="3378000878531336372">"мультимeдиа дыбыс деңгейі"</item>
+    <item msgid="3378000878531336372">"мультимeдианың дыбыс деңгейі"</item>
     <item msgid="5272927168355895681">"дабыл дыбысының деңгейі"</item>
     <item msgid="4422070755065530548">"хабар дыбысының қаттылығы"</item>
     <item msgid="3250654589277825306">"bluetooth дыбысының қаттылығы"</item>
@@ -291,7 +290,7 @@
     <item msgid="37519917674959757">"жадты оқу"</item>
     <item msgid="3868809525697401379">"жадқа жазу"</item>
     <item msgid="2504191192460059817">"экранды қосу"</item>
-    <item msgid="7905819538788103556">"есептік жазбаларды алу"</item>
+    <item msgid="7905819538788103556">"аккаунттарды алу"</item>
     <item msgid="1675025662248079254">"фонда іске қосу"</item>
     <item msgid="2553974920157061225">"арнайы мүмкіндіктердің дыбыс деңгейі"</item>
   </string-array>
@@ -332,7 +331,7 @@
     <item msgid="745291221457314879">"Негізгі дыбыс"</item>
     <item msgid="4722479281326245754">"Дыбыс қаттылығы"</item>
     <item msgid="6749550886745567276">"Қоңыраудың дыбыс деңгейі"</item>
-    <item msgid="2218685029915863168">"Mультимeдиа дыбыс деңгейі"</item>
+    <item msgid="2218685029915863168">"Mультимeдианың дыбыс деңгейі"</item>
     <item msgid="4266577290496513640">"Дабыл дыбысының деңгейі"</item>
     <item msgid="8608084169623998854">"Хабар дыбысының қаттылығы"</item>
     <item msgid="7948784184567841794">"Bluetooth дыбысының қаттылығы"</item>
@@ -358,7 +357,7 @@
     <item msgid="3778165903878569143">"Жадты оқу"</item>
     <item msgid="555939881912035315">"Жадқа жазу"</item>
     <item msgid="4281352581602735717">"Экранды қосу"</item>
-    <item msgid="346122795998225472">"Есептік жазбаларды алу"</item>
+    <item msgid="346122795998225472">"Аккаунттарды алу"</item>
     <item msgid="3756073389408535680">"Фонда іске қосу"</item>
     <item msgid="2114661179947426734">"Арнайы мүмкіндіктердің дыбыс деңгейі"</item>
   </string-array>
@@ -423,6 +422,10 @@
     <item msgid="6485511780196327736">"Басқа қолданбалардың үстінде"</item>
     <item msgid="3605616699204153590">"Навигация жолағы"</item>
   </string-array>
+  <string-array name="accessibility_button_gesture_selector_titles">
+    <item msgid="2370918472773154939">"Түйме"</item>
+    <item msgid="6922258575853746220">"Қимыл"</item>
+  </string-array>
   <string-array name="accessibility_button_size_selector_titles">
     <item msgid="7482952318152486459">"Кішкентай"</item>
     <item msgid="1666628329913333563">"Үлкен"</item>
@@ -484,13 +487,21 @@
     <item msgid="3164591924266309710">"Кэштелген (белсенділік клиенті)"</item>
     <item msgid="8186970968968646288">"Кэштелген (бос)"</item>
   </string-array>
+  <string-array name="sim_color_light">
+    <item msgid="7007548668267207615">"@color/SIM_color_cyan"</item>
+    <item msgid="177868870612833388">"@color/SIM_color_blue800"</item>
+    <item msgid="1129898906008357171">"@color/SIM_color_green800"</item>
+    <item msgid="4206364087389793587">"@color/SIM_color_purple800"</item>
+    <item msgid="6728943460061940130">"@color/SIM_color_pink800"</item>
+    <item msgid="968332068361935002">"@color/SIM_color_orange"</item>
+  </string-array>
   <string-array name="color_picker">
-    <item msgid="3230992859486877963">"Көкшіл жасыл"</item>
+    <item msgid="7216413848731287689">"Көк"</item>
     <item msgid="5661027589207588703">"Көк"</item>
-    <item msgid="3795787248113275442">"Индиго түсі"</item>
+    <item msgid="1219738214736244749">"Жасыл"</item>
     <item msgid="6331809026622602308">"Күлгін"</item>
     <item msgid="6390546163902724700">"Қызғылт"</item>
-    <item msgid="6618900408138432102">"Қызыл"</item>
+    <item msgid="6500473130620545980">"Қызғылт сары"</item>
   </string-array>
   <string-array name="automatic_storage_management_days">
     <item msgid="8896644025110620477">"30 күннен артық сақталған"</item>
@@ -505,8 +516,8 @@
   </string-array>
   <string-array name="wifi_metered_entries">
     <item msgid="3237321077949659241">"Автоматты түрде анықтау"</item>
-    <item msgid="3779092145391320375">"Трафик саналсын"</item>
-    <item msgid="2047166446768045816">"Трафик саналмасын"</item>
+    <item msgid="3779092145391320375">"Трафик саналады"</item>
+    <item msgid="2047166446768045816">"Трафик саналмайды"</item>
   </string-array>
   <string-array name="wifi_privacy_entries">
     <item msgid="3485945604919292489">"Кездейсоқ MAC мекенжайын пайдалану (әдепкі)"</item>
