--- a/res/values-pt-rPT/arrays.xml
+++ b/res/values-pt-rPT/arrays.xml
@@ -104,7 +104,6 @@
     <item msgid="8568170800958331461">"Não validar"</item>
     <item msgid="5703177653586269306">"Solicitar estado do certificado"</item>
     <item msgid="326388247868439528">"Exigir estado do certificado"</item>
-    <item msgid="1090956283885790552">"Exigir estados de todos os certificados não fidedignos"</item>
   </string-array>
   <string-array name="wifi_p2p_wps_setup">
     <item msgid="1446717102923442720">"Premir botão"</item>
@@ -178,7 +177,7 @@
   <string-array name="wifi_proxy_settings">
     <item msgid="4669222334822978847">"Nenhum"</item>
     <item msgid="6242198071587397280">"Manual"</item>
-    <item msgid="464383874780058242">"Config. autom. do proxy"</item>
+    <item msgid="464383874780058242">"Configuração automática do proxy"</item>
   </string-array>
   <string-array name="apn_auth_entries">
     <item msgid="2900892411844440682">"Nenhum"</item>
@@ -423,6 +422,10 @@
     <item msgid="6485511780196327736">"Flutuante sobre outras apps"</item>
     <item msgid="3605616699204153590">"Barra de navegação"</item>
   </string-array>
+  <string-array name="accessibility_button_gesture_selector_titles">
+    <item msgid="2370918472773154939">"Botão"</item>
+    <item msgid="6922258575853746220">"Gesto"</item>
+  </string-array>
   <string-array name="accessibility_button_size_selector_titles">
     <item msgid="7482952318152486459">"Pequeno"</item>
     <item msgid="1666628329913333563">"Grande"</item>
@@ -484,13 +487,21 @@
     <item msgid="3164591924266309710">"Em cache (cliente de atividade)"</item>
     <item msgid="8186970968968646288">"Em cache (vazio)"</item>
   </string-array>
+  <string-array name="sim_color_light">
+    <item msgid="7007548668267207615">"@color/SIM_color_cyan"</item>
+    <item msgid="177868870612833388">"@color/SIM_color_blue800"</item>
+    <item msgid="1129898906008357171">"@color/SIM_color_green800"</item>
+    <item msgid="4206364087389793587">"@color/SIM_color_purple800"</item>
+    <item msgid="6728943460061940130">"@color/SIM_color_pink800"</item>
+    <item msgid="968332068361935002">"@color/SIM_color_orange"</item>
+  </string-array>
   <string-array name="color_picker">
-    <item msgid="3230992859486877963">"Azul esverdeado"</item>
+    <item msgid="7216413848731287689">"Ciano"</item>
     <item msgid="5661027589207588703">"Azul"</item>
-    <item msgid="3795787248113275442">"Índigo"</item>
+    <item msgid="1219738214736244749">"Verde"</item>
     <item msgid="6331809026622602308">"Roxo"</item>
     <item msgid="6390546163902724700">"Cor-de-rosa"</item>
-    <item msgid="6618900408138432102">"Vermelho"</item>
+    <item msgid="6500473130620545980">"Laranja"</item>
   </string-array>
   <string-array name="automatic_storage_management_days">
     <item msgid="8896644025110620477">"Mais de 30 dias"</item>
