--- a/res/values-sr/arrays.xml
+++ b/res/values-sr/arrays.xml
@@ -104,7 +104,6 @@
     <item msgid="8568170800958331461">"Не верификуј"</item>
     <item msgid="5703177653586269306">"Затражи статус сертификата"</item>
     <item msgid="326388247868439528">"Захтевај статус сертификата"</item>
-    <item msgid="1090956283885790552">"Захтевај статусе свих непоузданих сертификата"</item>
   </string-array>
   <string-array name="wifi_p2p_wps_setup">
     <item msgid="1446717102923442720">"Притискање дугмета"</item>
@@ -423,6 +422,10 @@
     <item msgid="6485511780196327736">"Плута преко других апликација"</item>
     <item msgid="3605616699204153590">"Трака за навигацију"</item>
   </string-array>
+  <string-array name="accessibility_button_gesture_selector_titles">
+    <item msgid="2370918472773154939">"Дугме"</item>
+    <item msgid="6922258575853746220">"Покрет"</item>
+  </string-array>
   <string-array name="accessibility_button_size_selector_titles">
     <item msgid="7482952318152486459">"Мала"</item>
     <item msgid="1666628329913333563">"Велика"</item>
@@ -484,13 +487,21 @@
     <item msgid="3164591924266309710">"Кеширана (клијент активности)"</item>
     <item msgid="8186970968968646288">"Кеширана (празно)"</item>
   </string-array>
+  <string-array name="sim_color_light">
+    <item msgid="7007548668267207615">"@color/SIM_color_cyan"</item>
+    <item msgid="177868870612833388">"@color/SIM_color_blue800"</item>
+    <item msgid="1129898906008357171">"@color/SIM_color_green800"</item>
+    <item msgid="4206364087389793587">"@color/SIM_color_purple800"</item>
+    <item msgid="6728943460061940130">"@color/SIM_color_pink800"</item>
+    <item msgid="968332068361935002">"@color/SIM_color_orange"</item>
+  </string-array>
   <string-array name="color_picker">
-    <item msgid="3230992859486877963">"Плавозелена"</item>
+    <item msgid="7216413848731287689">"Тиркизна"</item>
     <item msgid="5661027589207588703">"Плава"</item>
-    <item msgid="3795787248113275442">"Тамноплава"</item>
+    <item msgid="1219738214736244749">"Зелена"</item>
     <item msgid="6331809026622602308">"Љубичаста"</item>
     <item msgid="6390546163902724700">"Розе"</item>
-    <item msgid="6618900408138432102">"Црвена"</item>
+    <item msgid="6500473130620545980">"Наранџаста"</item>
   </string-array>
   <string-array name="automatic_storage_management_days">
     <item msgid="8896644025110620477">"Старије од 30 дана"</item>
