--- a/res/values-ta/arrays.xml
+++ b/res/values-ta/arrays.xml
@@ -104,7 +104,6 @@
     <item msgid="8568170800958331461">"சரிபார்க்க வேண்டாம்"</item>
     <item msgid="5703177653586269306">"சான்றிதழ் கோரிக்கை நிலை"</item>
     <item msgid="326388247868439528">"சான்றிதழ் தேவை நிலை"</item>
-    <item msgid="1090956283885790552">"அனைத்து நம்பகத்தன்மை இல்லாத சான்றிதழ்களுக்கான தேவை நிலைகள்"</item>
   </string-array>
   <string-array name="wifi_p2p_wps_setup">
     <item msgid="1446717102923442720">"புஷ் பட்டன்"</item>
@@ -423,6 +422,10 @@
     <item msgid="6485511780196327736">"பிற ஆப்ஸ் மீது தோன்றுதல்"</item>
     <item msgid="3605616699204153590">"வழிசெலுத்தல் பட்டி"</item>
   </string-array>
+  <string-array name="accessibility_button_gesture_selector_titles">
+    <item msgid="2370918472773154939">"பட்டன்"</item>
+    <item msgid="6922258575853746220">"சைகை"</item>
+  </string-array>
   <string-array name="accessibility_button_size_selector_titles">
     <item msgid="7482952318152486459">"சிறியது"</item>
     <item msgid="1666628329913333563">"பெரியது"</item>
@@ -484,13 +487,21 @@
     <item msgid="3164591924266309710">"தற்காலிகச் சேமிப்பு (செயல்பாட்டு கிளையண்ட்)"</item>
     <item msgid="8186970968968646288">"தற்காலிகச் சேமிப்பு (காலி)"</item>
   </string-array>
+  <string-array name="sim_color_light">
+    <item msgid="7007548668267207615">"@color/SIM_color_cyan"</item>
+    <item msgid="177868870612833388">"@color/SIM_color_blue800"</item>
+    <item msgid="1129898906008357171">"@color/SIM_color_green800"</item>
+    <item msgid="4206364087389793587">"@color/SIM_color_purple800"</item>
+    <item msgid="6728943460061940130">"@color/SIM_color_pink800"</item>
+    <item msgid="968332068361935002">"@color/SIM_color_orange"</item>
+  </string-array>
   <string-array name="color_picker">
-    <item msgid="3230992859486877963">"பசும் நீலம்"</item>
+    <item msgid="7216413848731287689">"சியான்"</item>
     <item msgid="5661027589207588703">"நீலம்"</item>
-    <item msgid="3795787248113275442">"அடர் நீலம்"</item>
+    <item msgid="1219738214736244749">"பச்சை"</item>
     <item msgid="6331809026622602308">"ஊதா"</item>
     <item msgid="6390546163902724700">"பிங்க்"</item>
-    <item msgid="6618900408138432102">"சிவப்பு"</item>
+    <item msgid="6500473130620545980">"ஆரஞ்சு"</item>
   </string-array>
   <string-array name="automatic_storage_management_days">
     <item msgid="8896644025110620477">"30 நாட்களுக்கு மேல்"</item>
@@ -513,7 +524,7 @@
     <item msgid="741680937828608749">"சாதன MACகைப் பயன்படுத்து"</item>
   </string-array>
   <string-array name="wifi_hidden_entries">
-    <item msgid="342232116597649254">"வேண்டாம்"</item>
+    <item msgid="342232116597649254">"இல்லை"</item>
     <item msgid="2163015208097377388">"ஆம்"</item>
   </string-array>
   <string-array name="dark_ui_mode_entries">
