--- a/res/values-zh-rTW/arrays.xml
+++ b/res/values-zh-rTW/arrays.xml
@@ -104,7 +104,6 @@
     <item msgid="8568170800958331461">"不要驗證"</item>
     <item msgid="5703177653586269306">"要求取得憑證狀態"</item>
     <item msgid="326388247868439528">"需要取得憑證狀態"</item>
-    <item msgid="1090956283885790552">"需要取得所有非信任憑證的狀態"</item>
   </string-array>
   <string-array name="wifi_p2p_wps_setup">
     <item msgid="1446717102923442720">"按鈕"</item>
@@ -423,6 +422,10 @@
     <item msgid="6485511780196327736">"浮動顯示在其他應用程式上"</item>
     <item msgid="3605616699204153590">"導覽列"</item>
   </string-array>
+  <string-array name="accessibility_button_gesture_selector_titles">
+    <item msgid="2370918472773154939">"按鈕"</item>
+    <item msgid="6922258575853746220">"手勢"</item>
+  </string-array>
   <string-array name="accessibility_button_size_selector_titles">
     <item msgid="7482952318152486459">"小"</item>
     <item msgid="1666628329913333563">"大"</item>
@@ -484,13 +487,21 @@
     <item msgid="3164591924266309710">"快取 (活動用戶端)"</item>
     <item msgid="8186970968968646288">"快取 (清空)"</item>
   </string-array>
+  <string-array name="sim_color_light">
+    <item msgid="7007548668267207615">"@color/SIM_color_cyan"</item>
+    <item msgid="177868870612833388">"@color/SIM_color_blue800"</item>
+    <item msgid="1129898906008357171">"@color/SIM_color_green800"</item>
+    <item msgid="4206364087389793587">"@color/SIM_color_purple800"</item>
+    <item msgid="6728943460061940130">"@color/SIM_color_pink800"</item>
+    <item msgid="968332068361935002">"@color/SIM_color_orange"</item>
+  </string-array>
   <string-array name="color_picker">
-    <item msgid="3230992859486877963">"藍綠色"</item>
+    <item msgid="7216413848731287689">"青色"</item>
     <item msgid="5661027589207588703">"藍色"</item>
-    <item msgid="3795787248113275442">"靛藍色"</item>
+    <item msgid="1219738214736244749">"綠色"</item>
     <item msgid="6331809026622602308">"紫色"</item>
     <item msgid="6390546163902724700">"粉紅色"</item>
-    <item msgid="6618900408138432102">"紅色"</item>
+    <item msgid="6500473130620545980">"橘色"</item>
   </string-array>
   <string-array name="automatic_storage_management_days">
     <item msgid="8896644025110620477">"超過 30 天"</item>
