New feature “Text and reading options” for SetupWizard, Wallpaper, and Settings (3/n).
Add the "High contrast text" feature into the "Text and reading options" settings page.

Bug: 211503117
Test: manual test
Change-Id: I150fbda193c27164e02fe101373c84ff4d34a677

--- a/res/xml/accessibility_text_reading_options.xml
+++ b/res/xml/accessibility_text_reading_options.xml
@@ -27,4 +27,10 @@
         android:title="@string/force_bold_text"
         settings:keywords="@string/keywords_bold_text"
         settings:controller="com.android.settings.accessibility.FontWeightAdjustmentPreferenceController"/>
+
+    <SwitchPreference
+        android:key="toggle_high_text_contrast_preference"
+        android:persistent="false"
+        android:title="@string/accessibility_toggle_high_text_contrast_preference_title"
+        settings:controller="com.android.settings.accessibility.HighTextContrastPreferenceController"/>
 </PreferenceScreen>
