Make 'Format as portable' scrollable
ScrollView can't work within CoordinatorLayout,
replace it with NestedScrollView.

Bug: 213559304
Test: manual
    1. Create virtual disk by below command.
         adb shell sm set-virtual-disk true
    2. Settings -> Storage -> select the virtual disk.
    3. Format it as Phone storage.
    4. Click option menu -> Format as portable.
Change-Id: Ie5e51fb3c52431e1c94c2bcaaeb88fc05dfc993d

--- a/res/layout/storage_internal_format.xml
+++ b/res/layout/storage_internal_format.xml
@@ -20,7 +20,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
@@ -35,7 +35,7 @@
             android:lineSpacingExtra="@dimen/sud_description_line_spacing_extra"
             android:textAppearance="@*android:style/TextAppearance.DeviceDefault.Body1"
             android:textColor="?android:attr/textColorPrimary" />
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
     <FrameLayout
         android:layout_width="match_parent"
