Add config flag in Settings to control whether restricted profiles are offered.
This adds a config resource to specify whether restricted profiles
should be offered as an option when a new user is added. This replaces
the previous check if a device is voice capable, and will be defaulted
to false.

Bug: 202854971
Test: make RunSettingsRoboTests -j40 ROBOTEST_FILTER="com.android.settings.users.UserCapabilitiesTest"
Change-Id: If090fe8d902d6521acfde8c26e801aa4fc4f5ff4

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -560,4 +560,7 @@
     
     <!-- Whether to aggregate for network selection list-->
     <bool name="config_network_selection_list_aggregation_enabled">false</bool>
+
+    <!-- Whether to give option to add restricted profiles -->
+    <bool name="config_offer_restricted_profiles">false</bool>
 </resources>
