New feature “Text and reading options” for SetupWizard, Wallpaper, and Settings (4/n).
- Extending the interface of AppGridView to be flexible. It will be used
in the TextReadingPreferenceFragment.
  1. Add a new attribute "appCounts" into the view.
  2. Default app counts as 6 if not set the attribute.

Bug: 211503117
Test: make -j64 RunSettingsRoboTests ROBOTEST_FILTER=AppGridViewTest
Change-Id: I94a5f1d037551f6faba0300a176feb11fba1f203

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -103,6 +103,11 @@
         <attr name="iconBackgroundColor" format="reference|color" />
     </declare-styleable>
 
+    <!-- For AppGridView -->
+    <declare-styleable name="AppGridView">
+        <attr name="appCount" format="integer" />
+    </declare-styleable>
+
     <attr name="switchBarTheme" format="reference" />
     <attr name="switchBarMarginStart" format="dimension" />
     <attr name="switchBarMarginEnd" format="dimension" />
