Add "All services" settings in the App Preference screen for GmsCore.
BUG: 188920241

Test: N/A

Change-Id: Icf475f4a6c7498cd9782524806b0335e9cb0f8fc

--- a/res/xml/app_info_settings.xml
+++ b/res/xml/app_info_settings.xml
@@ -42,6 +42,12 @@
         settings:controller="com.android.settings.applications.appinfo.AppSettingPreferenceController" />
 
     <Preference
+        android:key="all_services_settings"
+        android:title="@string/app_info_all_services_label"
+        android:summary="@string/summary_placeholder"
+        settings:controller="com.android.settings.applications.appinfo.AppAllServicesPreferenceController" />
+
+    <Preference
         android:key="notification_settings"
         android:title="@string/notifications_label"
         settings:controller="com.android.settings.applications.appinfo.AppNotificationPreferenceController" />
