Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I25e71adccb1ccbdad52e5c659c22708388010c70

--- a/res/values-fi/arrays.xml
+++ b/res/values-fi/arrays.xml
@@ -375,7 +375,7 @@
     <item msgid="2166553138528640250">"Oletus"</item>
     <item msgid="4234707448428002595">"Sans Serif"</item>
     <item msgid="2390008695651897663">"Sans Serif, tiivistetty"</item>
-    <item msgid="2396492419730702454">"Sans Serif Monospace"</item>
+    <item msgid="2396492419730702454">"Sans Serif, tasalevyinen"</item>
     <item msgid="8199675052804786099">"Serif"</item>
     <item msgid="4554123140736897688">"Serif Monospace"</item>
     <item msgid="5485652650875486635">"Casual"</item>
