New feature “Text and reading options” for SetupWizard, Wallpaper, and Settings (6/n).
- Create new preview preference.
1) It will be integrated with TextReadingPreferenceFragment, and sub
previews layouts like app launchers, conversation messages, and mail
content.

Bug: 211503117
Test: make -j64 RunSettingsRoboTests ROBOTEST_FILTER=TextReadingPreviewPreferenceTest
Change-Id: I2d82d58438ee3f96c5a8dbb1809a0d6bdf3a00a2

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -730,6 +730,12 @@
         <item name="android:background">?android:attr/selectableItemBackground</item>
     </style>
 
+    <style name="AccessibilityTextReadingPreviewTitle"
+        parent="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title" >
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:padding">6dp</item>
+    </style>
+
     <style name="Widget.PopupWindow.Settings"
            parent="@android:style/Widget.DeviceDefault.PopupWindow">
         <item name="android:clipToPadding">true</item>
