Add MainSwitch for Fast Pair settings
Bug: 203579197
Test: Built and verified by logs
Change-Id: I68ef55f2601cce0f51a746d108187c94e496fb71

--- a/res/xml/fast_pair_settings.xml
+++ b/res/xml/fast_pair_settings.xml
@@ -21,4 +21,8 @@
     android:title="@string/fast_pair_settings"
     settings:keywords="@string/keywords_fast_pair">
 
+    <com.android.settingslib.widget.MainSwitchPreference
+        android:key="fast_pair_scan_switch"
+        android:title="@string/fast_pair_main_switch_title" />
+
 </PreferenceScreen>
