New feature “Text and reading options” for SetupWizard, Wallpaper, and Settings (8/n).
- Extending the LabeledSeekBarPreference
1) Add new attributes, "iconStart", "iconEnd",
"iconStartContentDescription", "iconEndContentDescription"
2) Add new interface setOnSeekBarChangeListener
- It will be integrated with display/font size items in next patches.

Bug: 211503117
Test: make -j64 RunSettingsRoboTests ROBOTEST_FILTER=LabeledSeekBarPreferenceTest
Change-Id: Id8fe4fb68062c0e92ca4c291d2f7c47303e8691e

--- a/res/layout/preference_labeled_slider.xml
+++ b/res/layout/preference_labeled_slider.xml
@@ -46,20 +46,16 @@
         android:textAlignment="viewStart"
         android:textColor="?android:attr/textColorSecondary" />
 
-    <SeekBar
-        android:id="@*android:id/seekbar"
-        android:layout_below="@android:id/summary"
-        android:layout_gravity="center_vertical"
+    <include
+        layout="@layout/icon_discrete_slider"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:paddingStart="0dp"
-        android:paddingEnd="12dp"
-        style="@android:style/Widget.Material.SeekBar.Discrete" />
+        android:layout_height="wrap_content"
+        android:layout_below="@android:id/summary" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@*android:id/seekbar"
+        android:layout_below="@id/seekbar_frame"
         android:orientation="horizontal">
 
         <TextView
