New feature “Text and reading options” for SetupWizard, Wallpaper, and Settings (10/n).
- Create the font size LabeledSeekBarPreference and add the entry
1) It's integrated with the system font scale configurations.
2) Create the new PreviewSizeSeekBarController component for controlling the LabeledSeekBarPreference of the display/font size.
3) Create the new PreviewSizeData component to store the configurations related to the display/font size features.

Bug: 211503117
Test: make RunSettingsRoboTests ROBOTEST_FILTER=FontSizeDataTest
Test: make RunSettingsRoboTests ROBOTEST_FILTER=PreviewSizeSeekBarControllerTest

Change-Id: I0c1cf6d0425c5c8b61cc8ed0c9fedadf7a65bd27

--- a/res/xml/accessibility_text_reading_options.xml
+++ b/res/xml/accessibility_text_reading_options.xml
@@ -21,6 +21,16 @@
     android:persistent="false"
     android:title="@string/accessibility_text_reading_options_title">
 
+    <com.android.settings.widget.LabeledSeekBarPreference
+        android:key="font_size"
+        android:selectable="false"
+        android:summary="@string/short_summary_font_size"
+        android:title="@string/title_font_size"
+        settings:iconEnd="@drawable/ic_add_24dp"
+        settings:iconEndContentDescription="@string/font_size_make_larger_desc"
+        settings:iconStart="@drawable/ic_remove_24dp"
+        settings:iconStartContentDescription="@string/font_size_make_smaller_desc"/>
+
     <SwitchPreference
         android:key="toggle_force_bold_text"
         android:persistent="false"
