[Panlingual] Add device default language to suggested group
 - Add default language preference
 - Polish unit test
 - Fix unsupported locale show on suggested group

Bug: 209728327
Test: local test
Test: atest pass

Change-Id: I69778cb8d69b21314c75689f0d61c25294c7f9d2

--- a/res/xml/app_locale_details.xml
+++ b/res/xml/app_locale_details.xml
@@ -28,7 +28,14 @@
 
     <PreferenceCategory
         android:key="category_key_suggested_languages"
-        android:title="@string/suggested_app_locales_title" />
+        android:title="@string/suggested_app_locales_title" >
+
+        <com.android.settingslib.widget.RadioButtonPreference
+            android:key="system_default_locale"
+            android:title="@string/preference_of_system_locale_title"
+            android:order="-10000"/>
+
+    </PreferenceCategory>
 
     <PreferenceCategory
         android:key="category_key_all_languages"
