Make the Settings split ratio configurable.
This new config will be overlayed in titan devices to update the split
ratio to 30/70

Bug: 215707431
Test: locally on device
Change-Id: I7bd193d7516939f5c4d434cd3333456c20e53a91

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -583,4 +583,7 @@
         -->
     </string-array>
 
+    <!-- The ratio to use when using the two-pane settings layout -->
+    <item name="config_activity_embed_split_ratio" format="float" type="dimen">0.5</item>
+
 </resources>
