New feature “Text and reading options” for SetupWizard, Wallpaper, and Settings (10/n).
1) Add a new text reading preference fragment for SetupWizard.
2) Add the entry into the vision settings, and temporarily set the visibility as gone.

Bug: 211503117
Test: make -j64 RunSettingsRoboTests ROBOTEST_FILTER=TextReadingPreferenceFragmentForSetupWizardTest
Change-Id: I5582d79672a9a9a375a79dbdf3a2055e7d785269

--- a/res/xml/accessibility_settings_for_setup_wizard.xml
+++ b/res/xml/accessibility_settings_for_setup_wizard.xml
@@ -21,6 +21,15 @@
     android:title="@string/vision_settings_title">
 
     <Preference
+        android:fragment="com.android.settings.accessibility.TextReadingPreferenceFragmentForSetupWizard"
+        android:icon="@drawable/ic_adaptive_font_download"
+        android:key="text_reading_options"
+        android:persistent="false"
+        android:title="@string/accessibility_text_reading_options_title"
+        settings:isPreferenceVisible="false"
+        settings:keywords="text_reading_options" />
+
+    <Preference
         android:key="font_size_preference"
         android:icon="@drawable/ic_font_size"
         android:summary="@string/short_summary_font_size"
