Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I3082c8189de757474d98e16540581bafa3a76467

--- a/res/values-si/arrays.xml
+++ b/res/values-si/arrays.xml
@@ -487,14 +487,6 @@
     <item msgid="3164591924266309710">"හැඹිලි ගත කළ (ක්‍රියාකාරකම් සේවාලාභියා)"</item>
     <item msgid="8186970968968646288">"හැඹිලි ගත කළ (හිස්)"</item>
   </string-array>
-  <string-array name="sim_color_light">
-    <item msgid="7007548668267207615">"@color/SIM_color_cyan"</item>
-    <item msgid="177868870612833388">"@color/SIM_color_blue800"</item>
-    <item msgid="1129898906008357171">"@color/SIM_color_green800"</item>
-    <item msgid="4206364087389793587">"@color/SIM_color_purple800"</item>
-    <item msgid="6728943460061940130">"@color/SIM_color_pink800"</item>
-    <item msgid="968332068361935002">"@color/SIM_color_orange"</item>
-  </string-array>
   <string-array name="color_picker">
     <item msgid="7216413848731287689">"සියන්"</item>
     <item msgid="5661027589207588703">"නිල්"</item>
@@ -589,4 +581,8 @@
     <!-- no translation found for rtt_setting_mode:1 (7903019313228349427) -->
     <!-- no translation found for rtt_setting_mode:2 (8525285145696236811) -->
     <!-- no translation found for rtt_setting_mode:3 (7725394146877517088) -->
+    <!-- no translation found for nfc_payment_favor:0 (9104058551372383947) -->
+    <!-- no translation found for nfc_payment_favor:1 (5283665583617307336) -->
+    <!-- no translation found for nfc_payment_favor_values:0 (2373999996715432397) -->
+    <!-- no translation found for nfc_payment_favor_values:1 (5305176997036663262) -->
 </resources>
