Set default name when creating a supervised user in fallback activity.
Fallback activity for supervised user creation was creating a supervised user
without a name (null), now creates it with a default name.
Also put an explanation on the activity stating it's just a placeholder.

Bug: 215232217
Bug: 207495450
Test: croot && make RunSettingsRoboTests -j40 ROBOTEST_FILTER="com.android.settings.users.UserSettingsTest"

Change-Id: I8090fde38155817ac2b4f88271abe8a0ad1ce747

--- a/res/layout/add_supervised_user.xml
+++ b/res/layout/add_supervised_user.xml
@@ -15,12 +15,18 @@
   ~ limitations under the License.
   -->
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:layout_margin="16dp"
+              android:orientation="vertical">
     <Button
         android:id="@+id/createSupervisedUser"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@*android:string/supervised_user_creation_label" />
-</FrameLayout>
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="@string/placeholder_activity" />
+</LinearLayout>
