Dream settings refactor.
We will be re-using the grid UI for the dream complication picker, so
this change refactors some of that logic so it can be re-used in the
complication controller.

We also update some of the UI here to match the most recent UX
decisions.

http://screen/BxhAwZwQSVoxUmN.png

Test: locally on device
Test: make -j64 RunSettingsRoboTests ROBOTEST_FILTER="com.android.settings.dream.DreamPickerControllerTest"
Bug: 214250590
Bug: 215703483
Change-Id: I9fbfa0f0cd31ae3d119c7cd1a9562d4cdb203d6c

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -441,11 +441,17 @@
     <dimen name="chartview_trapezoid_margin_bottom">2dp</dimen>
 
     <!-- Dimensions for Dream settings cards -->
-    <dimen name="dream_item_min_column_width">230dp</dimen>
-    <dimen name="dream_item_corner_radius">@*android:dimen/config_dialogCornerRadius</dimen>
-    <dimen name="dream_preference_margin_horizontal">4dp</dimen>
-    <dimen name="dream_preference_margin_bottom">8dp</dimen>
-    <dimen name="dream_picker_padding">40dp</dimen>
+    <dimen name="dream_item_min_column_width">210dp</dimen>
+    <dimen name="dream_item_corner_radius">28dp</dimen>
+    <dimen name="dream_item_content_padding">8dp</dimen>
+    <dimen name="dream_item_icon_size">20dp</dimen>
+    <dimen name="dream_item_title_margin_top">18dp</dimen>
+    <dimen name="dream_item_title_margin_bottom">8dp</dimen>
+    <dimen name="dream_item_title_margin_start">18dp</dimen>
+    <dimen name="dream_item_icon_margin_start">10dp</dimen>
+    <dimen name="dream_preference_margin_horizontal">10dp</dimen>
+    <dimen name="dream_preference_margin_bottom">20dp</dimen>
+    <dimen name="dream_picker_margin_horizontal">48dp</dimen>
 
     <!-- Sims/Data mobile/Calls/SMS select dialog-->
     <dimen name="sims_select_margin_bottom">24dp</dimen>
