--- a/res/color/dream_card_color_state_list.xml
+++ b/res/color/dream_card_color_state_list.xml
@@ -17,6 +17,6 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:androidprv="http://schemas.android.com/apk/prv/res/android">
-    <item android:state_activated="true" android:color="?androidprv:attr/colorSurfaceHighlight"/>
-    <item android:color="?androidprv:attr/colorSurface"/>
+    <item android:state_activated="true" android:color="?androidprv:attr/colorSurfaceVariant"/>
+    <item android:color="?androidprv:attr/colorSurfaceHighlight"/>
 </selector>
