--- a/res/layout/dream_preference_layout.xml
+++ b/res/layout/dream_preference_layout.xml
@@ -17,18 +17,17 @@
 
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:androidprv="http://schemas.android.com/apk/prv/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
     style="@style/DreamCardStyle"
     android:clickable="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
         android:minHeight="?android:attr/listPreferredItemHeight">
 
         <androidx.cardview.widget.CardView
@@ -37,16 +36,14 @@
             android:layout_height="0dp"
             app:cardCornerRadius="@dimen/dream_item_corner_radius"
             app:cardElevation="0dp"
-            app:layout_constraintDimensionRatio="3:2"
+            app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent">
-
             <ImageView
                 android:id="@+id/preview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"/>
-
         </androidx.cardview.widget.CardView>
 
         <Button
@@ -63,12 +60,14 @@
 
         <ImageView
             android:id="@+id/icon"
-            android:layout_width="18dp"
+            android:layout_width="@dimen/dream_item_icon_size"
             android:layout_height="0dp"
-            android:layout_marginTop="18dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="@dimen/dream_item_title_margin_top"
+            android:layout_marginStart="@dimen/dream_item_icon_margin_start"
+            android:layout_marginBottom="@dimen/dream_item_title_margin_bottom"
+            android:gravity="center_vertical"
             app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintTop_toBottomOf="@+id/preview_container"
             app_layout_constraintEnd_toStartOf="@+id/title_text"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -77,28 +76,16 @@
             android:id="@+id/title_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="18dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="@dimen/dream_item_title_margin_top"
+            android:layout_marginStart="@dimen/dream_item_title_margin_start"
+            android:layout_marginBottom="@dimen/dream_item_title_margin_bottom"
+            android:gravity="center_vertical"
             android:maxLines="1"
             android:ellipsize="end"
             android:textAppearance="?android:attr/textAppearanceListItemSmall"
             app:layout_constraintTop_toBottomOf="@+id/preview_container"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/icon"/>
-
-        <TextView
-            android:id="@+id/summary_text"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textColor="?android:attr/textColorSecondary"
-            android:maxLines="2"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/title_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
