Add Fast Pair saved devices settings preference
Test: Built and flashed on device, verified UI manually.
Bug: 203579197
Change-Id: I8e9563083dd9ed6a8badc6e2536cf94fc635525b

--- a/res/xml/fast_pair_settings.xml
+++ b/res/xml/fast_pair_settings.xml
@@ -25,4 +25,8 @@
         android:key="fast_pair_scan_switch"
         android:title="@string/fast_pair_main_switch_title" />
 
+    <Preference
+        android:key="saved_devices"
+        android:title="@string/fast_pair_saved_devices_title" />
+
 </PreferenceScreen>
