New feature “Text and reading options” for SetupWizard, Wallpaper, and Settings (13/n).
- Add the ResetPreference for controlling all preferences state in the text and reading options page.
1) Create a new interface ResetStateListener for the other preferences.

- Link-up between the reset, font size, and display size preferences.

Bug: 211503117
Test: make RunSettingsRoboTests ROBOTEST_FILTER=PreviewSizeSeekBarControllerTest
Test: make RunSettingsRoboTests ROBOTEST_FILTER=TextReadingResetControllerTest
Change-Id: Ida773967834e32737b1daac885a2dd71189d32c8

--- a/res/xml/accessibility_text_reading_options.xml
+++ b/res/xml/accessibility_text_reading_options.xml
@@ -57,4 +57,10 @@
         android:persistent="false"
         android:title="@string/accessibility_toggle_high_text_contrast_preference_title"
         settings:controller="com.android.settings.accessibility.HighTextContrastPreferenceController"/>
+
+    <com.android.settingslib.widget.LayoutPreference
+        android:key="reset"
+        android:layout="@layout/accessibility_text_reading_reset_button"
+        android:persistent="false"
+        android:selectable="false" />
 </PreferenceScreen>
