New feature “Text and reading options” for SetupWizard, Wallpaper, and Settings (15/n).
- Link-up between the ResetPreference and the HighTextContrastPreference.

Bug: 211503117
Test: atest HighTextContrastPreferenceControllerTest
Change-Id: I502e52f6a14243c19a707c91b0b5ab5dd163433a

--- a/res/xml/accessibility_text_reading_options.xml
+++ b/res/xml/accessibility_text_reading_options.xml
@@ -54,8 +54,7 @@
     <SwitchPreference
         android:key="toggle_high_text_contrast_preference"
         android:persistent="false"
-        android:title="@string/accessibility_toggle_high_text_contrast_preference_title"
-        settings:controller="com.android.settings.accessibility.HighTextContrastPreferenceController"/>
+        android:title="@string/accessibility_toggle_high_text_contrast_preference_title" />
 
     <com.android.settingslib.widget.LayoutPreference
         android:key="reset"
